updated api to handle recommended prerequisites prop
