# server/util/CourseInfoMapper.js
@@ -5,6 +5,7 @@ const toDBFormat = (httpFormat, isPatch = false) => {
     imageInfo,
     supplementaryInfo: supplementaryInfos,
     courseDisposition: courseDispositions,
+    recommendedPrerequisites: recommendedPrerequisites,
     courseCode,
   } = httpFormat
 
@@ -18,6 +19,8 @@ const toDBFormat = (httpFormat, isPatch = false) => {
     supplementaryInfo_sv: supplementaryInfos?.sv ?? undefined,
     courseDisposition_en: courseDispositions?.en ?? undefined,
     courseDisposition_sv: courseDispositions?.sv ?? undefined,
+    recommendedPrerequisites_en: recommendedPrerequisites?.en ?? undefined,
+    recommendedPrerequisites_sv: recommendedPrerequisites?.sv ?? undefined,
   }
 
   if (isPatch) {
@@ -41,6 +44,10 @@ const toClientFormat = dbFormat => {
     courseDisposition: {
       en: dbFormat.courseDisposition_en ?? '',
       sv: dbFormat.courseDisposition_sv ?? '',
+    },
+    recommendedPrerequisites: {
+      en: dbFormat.recommendedPrerequisites_en ?? '',
+      sv: dbFormat.recommendedPrerequisites_sv ?? '',
     },
     lastChangedBy: dbFormat.sellingTextAuthor ?? '',
     imageInfo: dbFormat.imageInfo ?? '',
